--- a/WBSBlog/Login/WBSLogin.xib
+++ b/WBSBlog/Login/WBSLogin.xib
@@ -21,7 +21,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="www.jack_blog.com" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ouF-z1-9cy">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="www.jack_blog.com" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ouF-z1-9cy">
+                    <frame key="frameInset" minX="50" minY="190" width="530" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -31,7 +32,8 @@
                         <constraint firstAttribute="height" constant="20" id="bul-FG-2FA"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="是否启用JSON API" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zA-a5-BhN">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="是否启用JSON API" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zA-a5-BhN">
+                    <frame key="frameInset" minX="20" minY="319" width="127" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="2PX-wQ-WT1"/>
                         <constraint firstAttribute="height" constant="30" id="J89-5O-P4U"/>
@@ -45,7 +47,8 @@
                         </mask>
                     </variation>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rNI-CL-fto">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rNI-CL-fto">
+                    <frame key="frameInset" minX="10" minY="384" width="580" height="35"/>
                     <color key="backgroundColor" red="0.32549019607843138" green="0.53725490196078429" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="Yxa-4t-lNs"/>
@@ -74,7 +77,8 @@
                         <constraint firstAttribute="width" constant="20" id="tkA-5d-qo3"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CbH-J7-ulA">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CbH-J7-ulA">
+                    <frame key="frameInset" minX="540" minY="322" width="35" height="25"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="35" id="tMG-PA-teZ"/>
                         <constraint firstAttribute="height" constant="25" id="vq4-6U-yom"/>
@@ -86,25 +90,43 @@
                         <action selector="apiTypeButtonDidClick:" destination="-1" eventType="touchUpInside" id="RL3-f9-wn3"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Login_Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="5X9-Y4-d0d">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Login_Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="5X9-Y4-d0d">
+                    <frame key="frameInset" minX="270" minY="90" width="60" height="60"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="ZJE-My-uGB"/>
                         <constraint firstAttribute="height" constant="60" id="lHF-s4-YAb"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="默认使用XMLRPC接口，可切换到JSON API接口" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sqk-js-kC9">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7DQ-sJ-S3j">
+                    <frame key="frameInset" minX="20" minY="429" width="52" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="IUO-6R-FVP"/>
+                        <constraint firstAttribute="width" constant="52" id="PXV-mh-XnC"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <state key="normal" title="温馨提示:">
+                        <color key="titleColor" red="0.35172888851264189" green="0.6025560943949948" blue="0.84540027976651189" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="tipsButtonDidClick:" destination="-1" eventType="touchUpInside" id="fL9-qT-94W"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="默认使用XMLRPC接口，可自由切换到JSON API接口" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sqk-js-kC9">
+                    <frame key="frameInset" minX="82" minY="429" width="498" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B0Y-uJ-x7q">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B0Y-uJ-x7q">
+                    <frame key="frameInset" minX="50" minY="230" width="530" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="6et-fy-Jnn"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PassWord" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QqO-VN-AEe">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PassWord" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QqO-VN-AEe">
+                    <frame key="frameInset" minX="50" minY="270" width="530" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="nbF-Zc-mN6"/>
                         <constraint firstAttribute="height" constant="30" id="o7d-0T-Y6E"/>
@@ -117,19 +139,6 @@
                         </mask>
                     </variation>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7DQ-sJ-S3j">
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="IUO-6R-FVP"/>
-                        <constraint firstAttribute="width" constant="30" id="WrU-Bh-nkI"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <state key="normal" title="提示:">
-                        <color key="titleColor" red="0.35172888851264189" green="0.6025560943949948" blue="0.84540027976651189" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="tipsButtonDidClick:" destination="-1" eventType="touchUpInside" id="fL9-qT-94W"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -139,7 +148,6 @@
                 <constraint firstItem="jDg-4J-D59" firstAttribute="top" secondItem="QmP-0N-MA9" secondAttribute="bottom" constant="30" id="2cf-hB-jWz"/>
                 <constraint firstItem="rNI-CL-fto" firstAttribute="top" secondItem="4zA-a5-BhN" secondAttribute="bottom" constant="35" id="8Um-nX-wBd"/>
                 <constraint firstItem="QqO-VN-AEe" firstAttribute="top" secondItem="jDg-4J-D59" secondAttribute="top" id="9Kn-yn-3Ap"/>
-                <constraint firstItem="Sqk-js-kC9" firstAttribute="centerY" secondItem="7DQ-sJ-S3j" secondAttribute="centerY" id="C3y-qs-vw7"/>
                 <constraint firstItem="4zA-a5-BhN" firstAttribute="leading" secondItem="Zq5-gr-JrT" secondAttribute="leading" id="FKc-I0-m6n"/>
                 <constraint firstItem="ouF-z1-9cy" firstAttribute="leading" secondItem="Zq5-gr-JrT" secondAttribute="trailing" constant="10" id="Ggw-ZB-GBl"/>
                 <constraint firstItem="ouF-z1-9cy" firstAttribute="centerY" secondItem="Zq5-gr-JrT" secondAttribute="centerY" id="Gii-7d-c5q"/>
@@ -167,6 +175,7 @@
                 <constraint firstItem="B0Y-uJ-x7q" firstAttribute="trailing" secondItem="ouF-z1-9cy" secondAttribute="trailing" id="oq7-yS-H6O"/>
                 <constraint firstItem="Zq5-gr-JrT" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="sWX-T2-LhF"/>
                 <constraint firstItem="jDg-4J-D59" firstAttribute="leading" secondItem="Zq5-gr-JrT" secondAttribute="leading" id="tjM-7V-72k"/>
+                <constraint firstItem="Sqk-js-kC9" firstAttribute="top" secondItem="7DQ-sJ-S3j" secondAttribute="top" id="uD7-51-8NK"/>
                 <constraint firstItem="Sqk-js-kC9" firstAttribute="trailing" secondItem="QqO-VN-AEe" secondAttribute="trailing" id="uxZ-XW-phS"/>
                 <constraint firstItem="rNI-CL-fto" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="v17-3i-SIH"/>
                 <constraint firstItem="4zA-a5-BhN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="40" id="vf1-ot-XCN"/>
@@ -188,7 +197,7 @@
                     <exclude reference="IjU-f2-XYs"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="391.5" y="224.5"/>
+            <point key="canvasLocation" x="392" y="225"/>
         </view>
     </objects>
     <resources>
