--- a/WBSBlog/Login/WBSLogin.xib
+++ b/WBSBlog/Login/WBSLogin.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,19 +24,20 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="www.jack_blog.com" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ouF-z1-9cy">
+                    <rect key="frame" x="50" y="190" width="305" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-email.png" translatesAutoresizingMaskIntoConstraints="NO" id="QmP-0N-MA9">
+                    <rect key="frame" x="20" y="235" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="Hqi-Qh-Chh"/>
                         <constraint firstAttribute="height" constant="20" id="bul-FG-2FA"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="是否启用JSON API" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zA-a5-BhN">
-
+                    <rect key="frame" x="20" y="320" width="128" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="2PX-wQ-WT1"/>
                         <constraint firstAttribute="height" constant="30" id="J89-5O-P4U"/>
@@ -47,9 +51,8 @@
                         </mask>
                     </variation>
                 </label>
-
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rNI-CL-fto">
-
+                    <rect key="frame" x="10" y="385" width="355" height="35"/>
                     <color key="backgroundColor" red="0.32549019607843138" green="0.53725490196078429" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="Yxa-4t-lNs"/>
@@ -67,20 +70,21 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-url.png" translatesAutoresizingMaskIntoConstraints="NO" id="Zq5-gr-JrT">
+                    <rect key="frame" x="20" y="195" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="KHZ-Ko-x9T"/>
                         <constraint firstAttribute="width" constant="20" id="MaN-lF-5b7"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-password.png" translatesAutoresizingMaskIntoConstraints="NO" id="jDg-4J-D59">
+                    <rect key="frame" x="20" y="275" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="5cC-PT-ijC"/>
                         <constraint firstAttribute="width" constant="20" id="tkA-5d-qo3"/>
                     </constraints>
                 </imageView>
-
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CbH-J7-ulA">
-
+                    <rect key="frame" x="315" y="322.5" width="35" height="25"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="35" id="tMG-PA-teZ"/>
                         <constraint firstAttribute="height" constant="25" id="vq4-6U-yom"/>
@@ -92,47 +96,43 @@
                         <action selector="apiTypeButtonDidClick:" destination="-1" eventType="touchUpInside" id="RL3-f9-wn3"/>
                     </connections>
                 </button>
-
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Login_Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="5X9-Y4-d0d">
+                    <rect key="frame" x="157.5" y="90" width="60" height="60"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="ZJE-My-uGB"/>
                         <constraint firstAttribute="height" constant="60" id="lHF-s4-YAb"/>
                     </constraints>
                 </imageView>
-
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7DQ-sJ-S3j">
-
+                    <rect key="frame" x="20" y="430" width="32" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="IUO-6R-FVP"/>
                         <constraint firstAttribute="width" constant="32" id="PXV-mh-XnC"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="提示:">
-
                         <color key="titleColor" red="0.35172888851264189" green="0.6025560943949948" blue="0.84540027976651189" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="tipsButtonDidClick:" destination="-1" eventType="touchUpInside" id="fL9-qT-94W"/>
                     </connections>
                 </button>
-
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="默认使用XMLRPC接口，可自由切换到JSON API接口" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sqk-js-kC9">
+                    <rect key="frame" x="62" y="430" width="293" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B0Y-uJ-x7q">
-
+                    <rect key="frame" x="50" y="230" width="305" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="6et-fy-Jnn"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PassWord" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QqO-VN-AEe">
-
+                    <rect key="frame" x="50" y="270" width="305" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="nbF-Zc-mN6"/>
                         <constraint firstAttribute="height" constant="30" id="o7d-0T-Y6E"/>
@@ -191,16 +191,16 @@
             <nil key="simulatedStatusBarMetrics"/>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="bw5-Yw-gVV"/>
-                    <exclude reference="LUO-hn-6y5"/>
-                    <exclude reference="9Kn-yn-3Ap"/>
-                    <exclude reference="dUc-EL-4fx"/>
-                    <exclude reference="2cf-hB-jWz"/>
                     <exclude reference="HFa-ae-HVc"/>
                     <exclude reference="fZZ-ZT-W9z"/>
                     <exclude reference="vf1-ot-XCN"/>
                     <exclude reference="LLn-3L-Edk"/>
+                    <exclude reference="LUO-hn-6y5"/>
+                    <exclude reference="9Kn-yn-3Ap"/>
+                    <exclude reference="dUc-EL-4fx"/>
                     <exclude reference="IjU-f2-XYs"/>
+                    <exclude reference="2cf-hB-jWz"/>
+                    <exclude reference="bw5-Yw-gVV"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="234" y="231"/>
